manifests/prometheus/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
  name: prometheus
  namespace: monitoring
spec:
  tls:
  - hosts:
    - prometheus.example.com
    secretName: prometheus-ingress-tls
  - hosts:
    - grafana.example.com
    secretName: grafana-ingress-tls
  rules:
  - host: prometheus.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-prometheus-prometheus
          servicePort: 9090
  - host: grafana.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-prometheus-grafana
          servicePort: 80
